--- a/src/lib/css/textae-editor-entity.less
+++ b/src/lib/css/textae-editor-entity.less
@@ -1,4 +1,4 @@
-@import "textae-const.less";
+@import 'textae-const.less';
 
 .entity-shadow() {
   box-shadow: 1px 1px 10px #600;
@@ -57,7 +57,7 @@
       user-select: none;
       -webkit-touch-callout: none;
       z-index: 1;
-      .entity-shadow()
+      .entity-shadow();
     }
 
     &__type-label {
@@ -136,7 +136,6 @@
   &__mode--block-without-relation,
   &__mode--relation {
     .textae-editor {
-
       &__entity__type-values {
         box-shadow: none;
         opacity: 0.9;
