--- a/src/lib/css/textae.less
+++ b/src/lib/css/textae.less
@@ -1,14 +1,15 @@
-@import "textae-control.less";
-@import "textae-editor-dialog.less";
-@import "textae-editor-dialog-autocomplete.less";
-@import "textae-editor-type-pallet.less";
-@import "modules/font-awesome.less";
-@import "modules/jquery-ui.min.less";
-@import "textae-editor.less";
-@import "textae-editor-entity.less";
-@import (less) "../../../node_modules/alertifyjs/build/css/alertify.css";
-@import (less) "../../../node_modules/alertifyjs/build/css/themes/default.css";
-@import (less) "../../../node_modules/jsondiffpatch/dist/formatters-styles/html.css";
+@import 'textae-control.less';
+@import 'textae-editor-dialog.less';
+@import 'textae-editor-dialog-autocomplete.less';
+@import 'textae-editor-type-pallet.less';
+@import 'modules/font-awesome.less';
+@import 'modules/jquery-ui.min.less';
+@import 'textae-editor.less';
+@import 'textae-editor-entity.less';
+@import (less) '../../../node_modules/alertifyjs/build/css/alertify.css';
+@import (less) '../../../node_modules/alertifyjs/build/css/themes/default.css';
+@import (less)
+  '../../../node_modules/jsondiffpatch/dist/formatters-styles/html.css';
 
 .textae-editor,
 .textae-editor * {
@@ -18,7 +19,7 @@
 }
 
 .textae-tool__key-help {
-  background: url("./images/keyhelp.png");
+  background: url('./images/keyhelp.png');
   height: 240px;
   width: 480px;
   color: #ddd;
