refactor: Inline the activeColor variable in the textae-editor.less

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -1,7 +1,5 @@
 @import 'textae-const.less';
 
-@acitveColor: #ffe;
-
 .textae-editor {
   // Specify the initial value of the line height.
   // Set the initial value of line-height to the style of textae-editor so that it can be easily overridden with inline style as follows.
@@ -26,7 +24,7 @@
       &--view-without-relation,
       &--denotation-with-relation,
       &--denotation-without-relation {
-        background-color: @acitveColor;
+        background-color: #ffe;
       }
 
       &--block-with-relation,
