misc: Update npm package less

--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -193,17 +193,17 @@
 
   /*== Elements inside the textae_control ==*/
   .textae-control__title {
-    .left;
+    .left();
   }
 
   .textae-control__separator {
-    .left;
+    .left();
     height: 16px;
     border: 2px solid #aad;
   }
 
   .textae-control__icon {
-    .left;
+    .left();
     width: 16px;
     height: 16px;
   }
