--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -43,40 +43,40 @@
 /* dialog */
 .textae-editor {
   &__load-dialog {
-    .common;
-    .save_load;
+    .common();
+    .save_load();
 
     &__config-title {
-      .config-title;
+      .config-title();
     }
 
     &__file-name,
     &__file-name--config {
-      .file;
+      .file();
     }
 
     &__file,
     &__file--config {
-      .file;
+      .file();
     }
   }
 
   &__save-dialog {
-    .common;
-    .save_load;
+    .common();
+    .save_load();
 
     &__config-title {
-      .config-title;
+      .config-title();
     }
 
     &__server-file-name,
     &__server-file-name--config {
-      .file;
+      .file();
     }
 
     &__local-file-name,
     &__local-file-name--config {
-      .file;
+      .file();
     }
 
     &__diff-title {
@@ -240,7 +240,7 @@
   }
 
   &__setting-dialog {
-    .common;
+    .common();
 
     & > div {
       margin-bottom: 4px;
@@ -278,7 +278,7 @@
       width: 100%;
 
       th {
-        .cell;
+        .cell();
         background-color: #ddd;
         color: #333;
 
@@ -300,7 +300,7 @@
       }
 
       td {
-        .cell;
+        .cell();
         background-color: #fff;
         line-break: anywhere;
 
