--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -299,12 +299,12 @@
   }
 
   table {
-    .table;
+    .table();
     width: 100%;
   }
 
   tr {
-    .table;
+    .table();
   }
 
   th {
@@ -313,7 +313,7 @@
   }
 
   td {
-    .table;
+    .table();
 
     input,
     button[type='button'] {
