refactor: Inline unnecessary nests of style

--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -375,9 +375,7 @@
     }
   }
 
-  &__add-value-to-attribute-dialog {
-    &__ok-button[disabled='disabled'] {
-      opacity: 0.1;
-    }
+  &__add-value-to-attribute-dialog__ok-button[disabled='disabled'] {
+    opacity: 0.1;
   }
 }
