refactor: Use class name of the jQueryUI dialog instead of original class name

--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -374,8 +374,8 @@
       }
     }
   }
+}
 
-  &__add-value-to-attribute-dialog__ok-button[disabled='disabled'] {
-    opacity: 0.1;
-  }
+.ui-dialog-buttonpane button[disabled='disabled'] {
+  opacity: 0.1;
 }
