refactor: Use nest syntax of less

--- a/src/lib/css/textae-editor-dialog-autocomplete.less
+++ b/src/lib/css/textae-editor-dialog-autocomplete.less
@@ -6,14 +6,14 @@
 
   .ui-menu-item {
     max-width: 100%;
-  }
 
-  // Truncate text of catditates
-  .ui-menu-item div {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    // Truncate text of catditates
+    div {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
   }
 
   // Reduce gap of border
