--- a/src/lib/css/textae-editor-dialog-autocomplete.less
+++ b/src/lib/css/textae-editor-dialog-autocomplete.less
@@ -46,6 +46,8 @@
   }
 }
 
-.textae-editor__edit-type-definition-dialog--id + .ui-widget.ui-autocomplete {
-  width: 520px;
+.textae-editor__edit-type-definition-dialog__input-box:nth-child(1) {
+  .ui-widget.ui-autocomplete {
+    width: 520px;
+  }
 }
