refactor: Add comment

--- a/src/lib/css/textae-editor-dialog-autocomplete.less
+++ b/src/lib/css/textae-editor-dialog-autocomplete.less
@@ -46,6 +46,7 @@
   }
 }
 
+// Fix candidates width for id field in the type definition dialog
 .textae-editor__edit-type-definition-dialog__input-box:nth-child(1) {
   .ui-widget.ui-autocomplete {
     width: 520px;
