refactor: Use nest syntax of less

--- a/src/lib/css/textae-editor-dialog-autocomplete.less
+++ b/src/lib/css/textae-editor-dialog-autocomplete.less
@@ -46,9 +46,12 @@
   }
 }
 
-// Fix candidates width for id field in the type definition dialog
-.textae-editor__edit-type-definition-dialog__input-box:nth-child(1) {
-  .ui-widget.ui-autocomplete {
-    width: 520px;
+// Fix candidates width in the type definition dialog
+.textae-editor__edit-type-definition-dialog__input-box {
+  // For the ID field.
+  &:nth-child(1) {
+    .ui-widget.ui-autocomplete {
+      width: 520px;
+    }
   }
 }
