bugfix: Horizontal scroll bar appears when autocomplete candidates are displayed in the label field of the Edit Type Definition dialog

--- a/src/lib/css/textae-editor-dialog-autocomplete.less
+++ b/src/lib/css/textae-editor-dialog-autocomplete.less
@@ -54,4 +54,11 @@
       width: 520px;
     }
   }
+
+  // For the label field.
+  &:nth-child(2) {
+    .ui-widget.ui-autocomplete {
+      width: 260px;
+    }
+  }
 }
