feature: If you use "text-align: right", the left edge will be cut off if the autocomplete candidate string is too long, so change it back to "direction: rtl"

--- a/src/lib/css/textae-editor-dialog-autocomplete.less
+++ b/src/lib/css/textae-editor-dialog-autocomplete.less
@@ -21,16 +21,13 @@
     margin: -1px 0;
   }
 
-  .ui-menu-item-wrapper {
-    text-align: right;
-  }
-
   // Show full text of candidates when hover
   .ui-menu-item:hover div {
     overflow: visible;
   }
 
   .ui-widget.ui-autocomplete {
+    direction: rtl; // cut off overflow on the left side
     z-index: 102;
   }
 }
