refactor: The linear-gradient() CSS function is already supported by all major browsers

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -52,21 +52,7 @@
   }
 
   &__footer {
-    background-color: #ddf;
-    /* fallback (Opera) */
-    background: #ddf;
-    /* Mozilla: */
-    background: -moz-linear-gradient(left, #ddddff, #ffffff);
-    /* Chrome, Safari:*/
-    background: -webkit-gradient(
-      linear,
-      left top,
-      right top,
-      from(#ddddff),
-      to(#ffffff)
-    );
-    /* MSIE */
-    // filter: progid: DXImageTransform.Microsoft.Gradient(StartColorStr='#DDDDFF', EndColorStr='#FFFFFF', GradientType=1);
+    background: linear-gradient(to left, #ffffff, #ddddff);
     bottom: -2px;
     height: 20px;
     left: -2px;
