bugfix: Links in the status bar disappear when the browser width is less than 726px

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -73,7 +73,7 @@
         text-overflow: ellipsis;
         vertical-align: bottom;
         white-space: nowrap;
-        width: 90%;
+        width: calc(100% - 5em);
       }
     }
   }
