refactor: Add cursor style to the textae-editor__type-pallet__add-attribute-value-button

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -126,6 +126,7 @@
 
   &__add-button,
   &__add-attribute-value-button {
+    cursor: pointer;
     &:before {
       .fontAwesomeIcon('\f067');
       top: 1px;
