refactor: Add textae-editor__type-pallet__predicate-controller division to the Attribute Pallet

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -76,6 +76,9 @@
 
   &__predicate {
     border: 1px solid;
+  }
+
+  &__predicate-controller {
     display: flex;
     justify-content: space-between;
   }
