feature: Change appearance of the delete predicate button in the pallet

--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -261,7 +261,8 @@
   }
 
   &__remove,
-  &__remove-value {
+  &__remove-value,
+  &__delete-predicate {
     &:before {
       .fontAwesomeIcon('\f1f8');
       left: -1px;
